Added Flask boilerplate code

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tuner</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-</head>
-
-<body>
-    <p>Welcome to the tuner!</p>
-
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-</body>
+{% extends "navigation.html" %}
+{% block content %}
+    <h1>How to Play</h1>
+    <p>Instructions on playing the game and details on scoring.</p>
+    <form action="{{ url_for('game') }}">
+        <button id="start-button">Start</button>
+    </form>
+{% endblock %}
