--- a/templates/game.html
+++ b/templates/game.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <a href="{{ url_for('static', filename='templates/game.html') }}">other_page</a>
+    <a href="{{ url_for('static', filename='templates/index.html') }}">other_page</a>
     <h1 id="title">Wordle</h1>
     <hr>
     <br>
