--- a/templates/game.html
+++ b/templates/game.html
@@ -1,4 +1,12 @@
 {% extends "navigation.html" %}
 {% block content %}
     <h1>Game</h1>
+    <h1 id="title">Wordle</h1>
+        <hr>
+        <br>
+        <div id="game-board">
+        </div>
+        <br>
+        <h1 id="answer"></h1>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script> 
 {% endblock %}
