added form for add word functionality and created some instructions on landing page

--- a/templates/add-word.html
+++ b/templates/add-word.html
@@ -1,4 +1,12 @@
 {% extends "navigation.html" %}
 {% block content %}
     <h1>Add a Word</h1>
+    <form name="myForm" action="" method="GET">
+        Please enter a 5 letter word that can be used as an answer in wordle: <br>
+        <input type="text" name="inputbox" value="" required>
+        <input type="button" name="button" value="Click" onClick="testResults(this.form)">
+      </form>
+      <br>
+      <p id="form-result">Word has been....</p>
+      <script src="{{ url_for('static', filename='js/add-word.js') }}"></script>
 {% endblock %}
