--- a/templates/game.html
+++ b/templates/game.html
@@ -7,5 +7,10 @@
         <div id="keyboard"></div>
         <h2 id="feedback">Guess a word</h2>
     </div>
+
+    <!-- Need this script to pass the secret word from Flask to Javascript -->
+    <script>
+        const secretWord = "{{ secret_word }}";
+    </script>
     <script src="{{ url_for('static', filename='js/game.js') }}"></script>
 {% endblock %}
