--- a/templates/game.html
+++ b/templates/game.html
@@ -6,6 +6,13 @@
         <br>
         <div id="keyboard"></div>
         <h2 id="feedback">Guess a word</h2>
+        <div class="timerDisplay">
+            00 : 00 : 00 : 000
+        </div>
+        <div class=”buttons”>
+            <button id="pauseTimer">Pause</button>
+            <button id="startTimer">Start</button>
+        </div>
     </div>
     <script src="{{ url_for('static', filename='js/game.js') }}"></script>
 {% endblock %}
