--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,10 @@
     <br>
     <p>Red means that the letter is not in the word at all</p>
     <img src="{{ url_for('static', filename='images/incorrect-everything.png') }}" id="game-img" class="img-thumbnail" alt="incorrect_everything">
+    <br>
+    <br>
     <form action="{{ url_for('game') }}">
+        <input type="text" id="player-name" name="inputbox" value="" placeholder="User" required>
         <button id="start-button">Start</button>
     </form>
 {% endblock %}
