--- a/templates/add-word.html
+++ b/templates/add-word.html
@@ -1,12 +1,27 @@
 {% extends "navigation.html" %}
 {% block content %}
     <h1>Add a Word</h1>
-    <form name="myForm" action="" method="GET">
+
+    <p>Enter a five letter word to be used as a possible answer in the game.</p>
+    <form action="/add_word" method="POST">
+        <label for="word">Word:</label>
+        <input name="word" type="text" required>
+        <input name="submit" type="button" value="Submit">
+    </form>
+
+    {% with messages = get_flashed_messages(category_filter=["word_added"]) %}
+        {% if messages %}
+            {% for message in messages %}
+            <p>{{ message }}</p>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+    <!-- <form name="myForm" action="" method="GET">
         Please enter a 5 letter word that can be used as an answer in wordle: <br>
         <input type="text" name="inputbox" value="" required>
         <input type="button" name="button" value="Click" onClick="testResults(this.form)">
-      </form>
-      <br>
-      <p id="form-result">Word has been....</p>
-      <script src="{{ url_for('static', filename='js/add-word.js') }}"></script>
+    </form>
+    <br>
+    <p id="form-result">Enter a word</p>
+    <script src="{{ url_for('static', filename='js/add-word.js') }}"></script> -->
 {% endblock %}
