--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <br>
 
     <form action="{{ url_for('game') }}">
-        <input type="text" id="player-name" name="inputbox" value="" placeholder="User" required>
+        <input type="text" id="player-name" name="player-name" value="" placeholder="User" required>
         <button id="start-button">Start</button>
     </form>
 {% endblock %}
