--- a/templates/game.html
+++ b/templates/game.html
@@ -9,9 +9,17 @@
         <h2 id="feedback">Guess a word</h2>
         <div class="timerDisplay">00:00:00:000</div>
     </div>
-    
-    <audio autoplay loop>
+
+    <!-- Audio elements for sound effects -->
+    <audio autoplay loop id="background-music">
         <source src="{{ url_for('static', filename='music/background.mp3') }}" type="audio/mpeg" />
     </audio>
+    <audio id="victory-sound">
+        <source src="{{ url_for('static', filename='music/victory.mp3') }}" type="audio/mpeg"/>
+    </audio>
+    <audio id="game-over-sound">
+        <source src="{{ url_for('static', filename='music/game-over.mp3') }}" type="audio/mpeg"/>
+    </audio>
+
     <script src="{{ url_for('static', filename='js/game.js') }}"></script>
 {% endblock %}
