--- a/templates/index.html
+++ b/templates/index.html
@@ -7,20 +7,22 @@
     <p><b>Examples</b></p>
 
     <p>Green means that the letter is in the right position</p>
-    <img src="{{ url_for('static', filename='images/correct-placement.png') }}" id="game-img" class="img-thumbnail" alt="correct_placement">
+    <img src="{{ url_for('static', filename='images/correct-placement.png') }}" id="game-img" class="img-thumbnail"
+    alt="correct_placement">
     <br>
 
     <p>Yellow means that the letter is in the word but not in the right position</p>
-    <img src="{{ url_for('static', filename='images/incorrect-placement.png') }}" id="game-img" class="img-thumbnail" alt="incorrect_placement">
+    <img src="{{ url_for('static', filename='images/incorrect-placement.png') }}" id="game-img" class="img-thumbnail"
+    alt="incorrect_placement">
     <br>
 
     <p>Red means that the letter is not in the word at all</p>
-    <img src="{{ url_for('static', filename='images/incorrect-everything.png') }}" id="game-img" class="img-thumbnail" alt="incorrect_everything">
+    <img src="{{ url_for('static', filename='images/incorrect-everything.png') }}" id="game-img" class="img-thumbnail"
+    alt="incorrect_everything">
     <br>
     <br>
 
-    <form action="{{ url_for('game') }}">
-        <input type="text" id="player-name" name="player-name" value="" placeholder="User" required>
+    <form action="/game">
         <button id="start-button">Start</button>
     </form>
 
