Added username text in the navigation bar

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -1,14 +1,14 @@
 {% extends "navigation.html" %}
 {% block content %}
     <h1>Leaderboard</h1>
-    <table class="table">
+    <table class="table table-bordered table-hover">
         <thead>
             <tr>
-                <th>Username</th>
-                <th>Player ID</th>
-                <th>Score</th>
-                <th>Time</th>
-                <th>Number of Guesses</th>
+                <th class="th-sm">Username</th>
+                <th class="th-sm">Player ID</th>
+                <th class="th-sm">Score</th>
+                <th class="th-sm">Time</th>
+                <th class="th-sm">Number of Guesses</th>
             </tr>
         </thead>
 
