register page separate from index

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -15,6 +15,7 @@
             <li class="nav-item"><a href="{{ url_for('home') }}">Home</a></li>
             <li class="nav-item"><a href="{{ url_for('leaderboard') }}">Leaderboard</a></li>
             <li class="nav-item"><a href="{{ url_for('add_word') }}">Add a Word</a></li>
+            <li class="nav-item"><a href="{{ url_for('register') }}">Register</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
             <li class="nav-item"><a>{{ username_text }}</a></li>
