--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -32,3 +32,17 @@
 
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
+
+<footer class="text-center text-white fixed-bottom">
+    <!-- Grid container -->
+    <div class="container p-4"></div>
+    <!-- Grid container -->
+  
+    <br>
+    <div class="text-center p-3">
+        This page was made by Ali Rajan and Alykhan Versi
+    </div>
+    <br>
+      <p class="text-white" >Ali - 1009034386 ||| <a href="https://github.com/ali-rajan"><img src="../static/images/githubicon.png" alt="github-icon" id="github-icon"></a></p>
+      <p class="text-white" >Alykhan - 1007192342 ||| <a href="https://github.com/alykhan02"><img src="../static/images/githubicon.png" alt="github-icon" id="github-icon"></a></p>
+</footer>
