--- a/templates/index.html
+++ b/templates/index.html
@@ -44,14 +44,21 @@
 
     <h2>Log In</h2>
 
-    <form action="/login" method="POST">
-        <label for="username">Username</label>
-        <input type="text" name="username" required>
-        <label for="password">Password</label>
-        <input type="password" name="password" required>
-        <button type="submit" name="login">Login</button>
+    <form class="p-3 mt-3" action="/login" method="POST">
+        <div class="form-field d-flex align-items-center">
+            <span class="far fa-user"></span>
+            <input type="text" name="username" id="userName" placeholder="Username" required>
+        </div>
+        <br>
+        <div class="form-field d-flex align-items-center">
+            <span class="fas fa-key"></span>
+            <input type="password" name="password" id="pwd" placeholder="Password" required>
+        </div>
+        <br>
+        <button class="btn mt-3">Login</button>
     </form>
-
+    
+    <br>
     <form action="/logout">
         <button type="submit" name="logout">Logout</button>
     </form>
