--- a/templates/register.html
+++ b/templates/register.html
@@ -3,12 +3,27 @@
 
     <h2>Register</h2>
 
-    <form action="/user-created" method="POST">
-        <label for="username">Username</label>
-        <input type="text" name="username" required>
-        <label for="password">Password</label>
-        <input type="password" name="password" required>
-        <button type="submit" name="register">Register</button>
+
+    <form class="p-3 mt-3" action="/user-created" method="POST">
+        <div class="form-field d-flex align-items-center">
+            <span class="far fa-user"></span>
+            <input type="text" name="username" id="userName" placeholder="Username" required>
+        </div>
+        <br>
+        <div class="form-field d-flex align-items-center">
+            <span class="fas fa-key"></span>
+            <input type="password" name="password" id="pwd" placeholder="Password" required>
+        </div>
+        <br>
+        <div class="form-check">
+            <label class="form-check-label">
+              <input type="checkbox" class="form-check-input" required>
+              I Read and Accept <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley">Terms and Conditions</a>
+            </label>
+          </div>
+          <br>
+        <button class="btn mt-3" type="submit" name="register">Register</button>
+
     </form>
 
     {% with messages = get_flashed_messages(category_filter=["user_register"]) %}
