--- a/templates/add-word.html
+++ b/templates/add-word.html
@@ -4,8 +4,7 @@
 
     <p>Enter a five letter word to be used as a possible answer in the game.</p>
     <form action="/add_word" method="POST">
-        <label for="word">Word:</label>
-        <input name="word" type="text" required>
+        <input name="word" type="text" placeholder="Word" required>
         <input name="submit" type="button" value="Submit">
     </form>
 
