--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -30,4 +30,6 @@
     </audio>
 
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"></script>
 </body>
