--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -64,4 +64,6 @@
             {% endfor %}
         </tbody>
     </table>
+
+    <script src="{{ url_for('static', filename='js/leaderboard.js') }}"></script>
 {% endblock %}
