--- a/templates/add-word.html
+++ b/templates/add-word.html
@@ -4,15 +4,23 @@
 
     <p>Enter a five letter word to be used as a possible answer in the game.</p>
     <form action="/add_word" method="POST">
-        <input name="word" type="text" placeholder="Word" required>
-        <input name="submit" type="button" value="Submit">
+        <div class="form-group">
+            <input class="form-control" name="word" type="text" placeholder="Word" required>
+            <button class="btn btn-primary" type="submit">Submit</button>
+        </div>
     </form>
+    <!-- <form action="/add_word" method="POST">
+        <input type="text" name="word" required placeholder="Word">
+        <input name="submit" type="button" value="Submit">
+    </form> -->
 
-    {% with messages = get_flashed_messages(category_filter=["word_added"]) %}
-        {% if messages %}
-            {% for message in messages %}
-            <p>{{ message }}</p>
-            {% endfor %}
-        {% endif %}
-    {% endwith %}
+    <div class="messages">
+        {% with messages = get_flashed_messages(category_filter=["word_added"]) %}
+            {% if messages %}
+                {% for message in messages %}
+                <p>{{ message }}</p>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+    </div>
 {% endblock %}
