Implemented leaderboard search bar

--- a/templates/add-word.html
+++ b/templates/add-word.html
@@ -5,7 +5,7 @@
     <p>Enter a five letter word to be used as a possible answer in the game.</p>
     <form action="/add_word" method="POST">
         <div class="form-group">
-            <input class="form-control" name="word" type="text" placeholder="Word" required>
+            <input class="form-control" name="word" type="text" placeholder="Word" required autofocus>
             <button class="btn btn-primary" type="submit">Submit</button>
         </div>
     </form>
