improvement on logout

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -17,18 +17,24 @@
             <li class="nav-item"><a href="{{ url_for('add_word') }}">Add a Word</a></li>
             <li class="nav-item"><a href="{{ url_for('register') }}">Register</a></li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <div class="dropdown">
-                <li class="nav-item" id="login-name">
-                    <button>{{ username_text }}</button>
-                </li>
-                <div class="dropdown-content">
+
+        <div class="nav navbar-nav navbar-right">
+            <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            {{ username_text }}
+                <span class="caret"></span>
+            </button>
+
+            <!-- Filter dropdown -->
+            <div class="dropdown-menu dropdown-menu-right">
+                <li>
                     <form action="/logout">
-                        <button type="submit" name="logout">Exit</button>
+                        <button class="btn btn-outline-secondary dropdown-item" type="submit" name="logout" aria-haspopup="true" aria-expanded="false">Log Out</button>
                     </form>
-                </div>
+                </li>
             </div>
-        </ul>
+
+        </div>
     </nav>
         
     
