--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -18,29 +18,28 @@
             <li class="nav-item"><a href="{{ url_for('register') }}">Register</a></li>
         </ul>
 
-        <div class="nav navbar-nav navbar-right">
+        <div class="nav navbar-nav navbar-right" id="logout-dropdown">
             <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-            {{ username_text }}
+                {{ username_text }}
                 <span class="caret"></span>
             </button>
 
-            <!-- Filter dropdown -->
             <div class="dropdown-menu dropdown-menu-right">
                 <li>
                     <form action="/logout">
-                        <button class="btn btn-outline-secondary dropdown-item" type="submit" name="logout" aria-haspopup="true" aria-expanded="false">Log Out</button>
+                        <button class="btn btn-outline-secondary dropdown-item" type="submit" name="logout"
+                        aria-haspopup="true" aria-expanded="false">Log Out</button>
                     </form>
                 </li>
             </div>
-
         </div>
     </nav>
-        
-    
 
 
-    
+
+
+
 
     {% block content %}
     {% endblock %}
