Added instructions and made some minor tweaks

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -10,10 +10,7 @@
 
             <div class="input-group-btn">
                 <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-                    Filters
-                    <!-- <span class="caret"></span> -->
-                </button>
+                aria-haspopup="true" aria-expanded="false">Filters</button>
 
                 <!-- Filter dropdown -->
                 <div class="dropdown-menu dropdown-menu-right">
